crates/gobley-uniffi-bindgen/src/snapshots/gobley_uniffi_bindgen__snapshot_tests__records.stub.kt.snap
---
source: crates/gobley-uniffi-bindgen/src/snapshot_tests.rs
expression: "bindings.stub.as_deref().unwrap_or(\"\")"
---


@file:Suppress("RemoveRedundantBackticks")

package uniffi.records

// Public interface members begin here.















public actual fun `makeConfig`(): Config {
    TODO()
}
