crates/gobley-uniffi-bindgen/src/snapshots/gobley_uniffi_bindgen__snapshot_tests__simple_fns.stub.kt.snap
---
source: crates/gobley-uniffi-bindgen/src/snapshot_tests.rs
expression: "bindings.stub.as_deref().unwrap_or(\"\")"
---


@file:Suppress("RemoveRedundantBackticks")

package uniffi.simple_fns

// Public interface members begin here.















public actual fun `add`(`a`: kotlin.UInt, `b`: kotlin.UInt): kotlin.UInt {
    TODO()
}

public actual fun `echoBytes`(`value`: kotlin.ByteArray): kotlin.ByteArray {
    TODO()
}

public actual fun `getString`(): kotlin.String {
    TODO()
}

public actual fun `getU16`(): kotlin.UShort {
    TODO()
}

public actual fun `getU8`(): kotlin.UByte {
    TODO()
}

public actual fun `identityBool`(`value`: kotlin.Boolean): kotlin.Boolean {
    TODO()
}
